Always anchor to top of the anchor element

Anchoring to the bottom corner results in unnecessary adjustment content
is inserted above the anchor position but within the viewport. Always
anchoring to the top has the problem that we wont adjust when content is
inserted below the anchor position but above the viewport. The latter (not
anchoring at all) is better than anchoring to the wrong position.

This CL anchors to the top left for ltr and vertical-lr writing mode and top
right for rtl and vertical-rl writing mode.

BUG=600891,594877

Review-Url: https://codereview.chromium.org/1958973004
Cr-Commit-Position: refs/heads/master@{#392774}

Former-commit-id: d91478719a0603374c12efbd79d9cd248770e7ad